2006-03-03  Martin Rudalics  <rudalics@gmx.at>

	* font-lock.el (lisp-font-lock-keywords-2)
	* emacs-lisp/rx.el (rx-check-any, rx-check-not)
	* generic-x.el (reg-generic-mode): Quote "]"s in regexps when
	they have no special meaning.

	* midnight.el (clean-buffer-list): Handle case where base-buffer of
        indirect buffer gets killed before indirect buffer.  Use dolist.

2006-03-03  Ken Manheimer  <ken.manheimer@gmail.com>

	* emacs-lisp/edebug.el (edebug-display): Use `edebug-sit-for-seconds'
	value instead of a literal constant (1) on more pauses.

2006-03-03  Slawomir Nowaczyk  <slawomir.nowaczyk.847@student.lu.se>  (tiny change)

	* textmodes/flyspell.el (flyspell-external-point-words): Be
	case-sensitive.

2006-03-03  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-url-regexp): Match entire url when it starts
	with "www".

2006-03-03  Ken Manheimer  <ken.manheimer@gmail.com>

	allout.el: Restablished intermediate missing comment header to
	preserve outline structure.
	(allout-beginning-of-current-entry): Wasn't skipping invisible
	text - fixed.
	(allout-open-topic): Was failing when opening a topic at
	end-of-buffer - fixed.
	(allout-minor-mode): Moved nearer to allout-mode function.

2006-03-02  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-paste-subtree): Removed forgotten (debug)
	form.

2006-03-02  Nick Roberts  <nickrob@snap.net.nz>

	* dframe.el (dframe-frame-mode): Don't burp when menu-bar-lines
	is nil.

	* progmodes/gud.el (gud-speedbar-menu-items): Use
	buffer-local-value and add missing :visible keyword.

	* progmodes/gdb-ui.el (gdb-speedbar-refresh): Quieten
	speedbar-refresh.

2006-03-01  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/reftex-index.el (reftex-index-map): `follow-mouse'
	must be `follow-link'.

	* textmodes/reftex-toc.el (reftex-toc-map): `follow-mouse' must be
	`follow-link'.

	* textmodes/org.el (org-export-as-html): Fix bugs in HTML
	formatting: No nested anchors.